<resources>
    <string name="app_name">Armoire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_login_btn">Login</string>
    <string name="txt_register_btn">Sign Up</string>
    <string name="armoire_logo_description">Armoire Logo</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_information_no_account">Don\'t have an account?</string>
    <string name="txt_placeholder_password">Enter your password</string>
    <string name="txt_placeholder_usermail">Enter your username/email</string>
    <string name="txt_info_has_account">Already have an account?</string>
</resources>