<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboarding_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.OnboardingFragment"
    android:padding="24dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="-50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/armoire_logo_description"
        android:src="@drawable/logo_armoire"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/txt_login_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@color/buttonPrimary"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.85"/>

        <!-- Register Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/txt_register_btn"
            android:textColor="@color/buttonPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:backgroundTint="@color/buttonSecondary"
            app:strokeColor="@color/buttonPrimary"
            app:strokeWidth="2dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.85"/>
    </LinearLayout>
    <!-- Login Button -->


</androidx.constraintlayout.widget.ConstraintLayout>
